@@ -1,3 +1,10 @@
+UNRELEASED CHANGES
+
+  IMPROVEMENTS:
+
+    * "bzr INIT dir" now initializes the specified directory, and creates 
+      it if it does not exist.  (John Arbash Meinel)
+
 bzr 0.6 2005-10-28
 
   IMPROVEMENTS:
